tests/baselines/reference/exportNonVisibleType.errors.txt
foo1.ts(7,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
foo2.ts(10,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
foo3.ts(10,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.


==== foo1.ts (1 errors) ====
    interface I1 {
    	a: string;
    	b: number;
    }
    
    var x: I1 = {a: "test", b: 42};
    export = x; // Should fail, I1 not exported.
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    
    
==== foo2.ts (1 errors) ====
    interface I1 {
    	a: string;
    	b: number;
    }
    
    class C1 {
    	m1: I1;
    }
    
    export = C1; // Should fail, type I1 of visible member C1.m1 not exported.
    ~~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    
==== foo3.ts (1 errors) ====
    interface I1 {
    	a: string;
    	b: number;
    }
    
    class C1 {
    	private m1: I1;
    }
    
    export = C1; // Should work, private type I1 of visible class C1 only used in private member m1.
    ~~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    